# bechdel-test-predictor

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: basic-checks.yml
analysis/: 01_Data-Exploration.ipynb  02_Feature-Exploration.ipynb  03_Preprocessing-Pipeline.ipynb  README.md  train.py  transformers.py
docs/: cleanup_mlflow.md  clear_psql.md  model_logs.md  system_architecture.md
docs/diagrams/: bechdel_test.drawio  inference_diagram.drawio  system_diagram.drawio
examples/: BechdelAPI Example.ipynb  MovieClient.ipynb
flask_app/: app.py
flask_app/templates/: error.html
helpers/: clean_up_mlflow.sql  download_data.py
kubernetes/ConfigMap/: postgres-configmap.yaml
kubernetes/Deployment/: flask-app-deployment.yaml  mlflow-deployment.yaml  psql-deployment.yaml
kubernetes/Jobs/: cleanup-mlflow.yaml  init-data.yaml  python-task-job.yaml  train-model.yaml
kubernetes/PersistentVolume/: psql-claim.yaml  psql-v.yaml
kubernetes/Services/: flask-app-service.yaml  mlflow-service.yaml  psql-service.yaml
scripts/: build_and_push_images.sh
services/flask_app/: Dockerfile  app.py  mlflow_utils.py  settings.py
services/flask_app/templates/: index.html
services/mlflow_server/: Dockerfile  host_mlflow.sh  requirements.txt
services/python_tasks/: Dockerfile  init_data.py  train_model.py
services/python_tasks/scripts/: cleanup_mlflow.py  init_data.py  train_model.py
services/train_model_task/: Dockerfile  requirements.txt  train_model.py
src/bechdel_test_predictor/: __init__.py  bechdel.py  cast.py  crew.py  error.py  model.py  movie.py  movie_db_api.py  movie_db_client.py  prediction.py
src/bechdel_test_predictor/logging/: crud.py  handler.py  models.py  utils.py
src/bechdel_test_predictor/mlflow/: __init__.py  mlflow_model.py  settings.py  utils.py
src/bechdel_test_predictor/model/: data.py  model.py  pipeline.py  settings.py  train_model.py  transformers.py
src/bechdel_test_predictor/training/: pipeline.py  settings.py
src/bechdel_test_predictor/training/mlflow/: __init__.py  mlflow_model.py  train.py
tests/: test_movie_db_client.py  test_movie_processor.py
