[tool.poetry]
name = "bechdel-test-predictor"
version = "0.1.0"
description = ""
authors = ["Ned Webster <ned.webster@simplybusiness.co.uk>"]
include = ["src/bechdel_test_predictor/**/*"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
metaflow = "^2.12.5"
opendatasets = "^0.1.22"
pandas = "^2.2.2"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.0"
mlflow = "^2.14.1"
pip-system-certs = "^4.0"
backoff = "^2.2.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
pylint = "^3.2.5"
kubernetes = "^30.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
pyproject-flake8 = "^7.0.0"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[tool.black]
line-length = 120

[tool.isort]
skip_glob = "*/.*/*,.*"
default_section = "THIRDPARTY"
line_length = 120
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
multi_line_output = 3

[tool.flake8]
max-line-length = 120
per-file-ignores = []
exclude = [".venv", "dist"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
