[project]
name = "bechdel-test-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "flask>=3.1.0",
    "kubernetes>=31.0.0",
    "metaflow>=2.12.30",
    "mlflow>=2.17.2",
    "opendatasets>=0.1.22",
    "pandas>=2.2.3",
    "pip-system-certs>=4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
package = true
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "seaborn>=0.13.2",
]
